add vue object with lesson data

--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
                 </main>
         </div>
 
-        
+        <script> 
+        var webstore = new Vue({
+            el: '#app',
+            data: {
+                sitename: 'Group 5',
+                product:{
+                    subject: "Subject: Chemistry",
+                    location: "Location: London",
+                    currency: "$",
+                    price : 500,
+                    spaces : 5,
+                    image: "image/chemistry.jpg",
+                },
+                cart: []
+            },
+            
+        });
+        </script>
     </body>
 </html>
