add image link from external url

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     currency: "$",
                     price : 500,
                     spaces : 5,
-                    image: "image/chemistry.jpg",
+                    image: "https://www.imperial.ac.uk/ImageCropToolT4/imageTool/uploaded-images/newseventsimage_1537198485721_mainnews2012_x1.jpg",
                 },
                 cart: []
             },
